fix: virtual account switch image height on mobile

--- a/packages/core/src/sass/app/modules/cashier.scss
+++ b/packages/core/src/sass/app/modules/cashier.scss
@@ -327,7 +327,7 @@
         @include mobile {
             width: 100%;
             margin: 2.4rem 0 0;
-            height: 280px;
+            height: 320px;
         }
     }
     &__virtual {
